# dyadcore

./: .gitignore  CHANGELOG.md  LICENSE  PHILOSOPHY.md  README.md  benchmark.py  build_benchmark_json.py  dyadcore.py  eval_conversation.py  eval_conversation_results.json  eval_multisession.py  eval_retrieval.py  hermes_bridge.py  longmemeval_adapter.py  longmemeval_results.json  multisession_benchmark.json  multisession_results_v4.json  personamem_adapter.py  personamem_results.json  pyproject.toml  test_decay_topology.py  test_dyadcore.py  test_real_data.py
landing/: index.html
landing/api/: count.js
